--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "bcrypt": "^5.0.0",
     "camelcase-keys": "^6.2.2",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.0",
